--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
       <title>Website</title>
    </head>
    <body>
-      <canvas id="glCanvas" width="1800" height="900"></canvas>
+      <canvas id="glCanvas" width="1800" height="900" vertex-shader="vert.glsl" fragment-shader="frag.glsl"></canvas>
    </body>
    <script src="gl.js"></script>
 </html>
